--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "core-js": "^3.25.0",
+    "moment": "^2.29.4",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-flip-move": "^3.0.4",
+    "regenerator-runtime": "^0.13.9",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "babel-core": "6.26.*",
